# Bet-helper

./: .env.example  .gitignore  README.md  agent.md  main.py  match.py  pyproject.toml  scrape.py
bet_helper/: cli.py  models.py  storage.py
data/: calibration_cache_Bundesliga.json  calibration_cache_Bundesliga2.json  calibration_cache_Championship.json  calibration_cache_Eredivisie.json  calibration_cache_LaLiga.json  calibration_cache_LeagueOne.json  calibration_cache_LeagueTwo.json  calibration_cache_Ligue1.json  calibration_cache_Ligue2.json  calibration_cache_PL.json  calibration_cache_SerieA.json  calibration_cache_SerieB.json  eval_results_20260120_213130.json  historical_matches_Bundesliga.json  historical_matches_Bundesliga2.json  historical_matches_Championship.json  historical_matches_Eredivisie.json  historical_matches_LaLiga.json  historical_matches_LeagueOne.json  historical_matches_LeagueTwo.json  historical_matches_Ligue1.json  historical_matches_Ligue2.json  historical_matches_PL.json  historical_matches_SerieA.json  historical_matches_SerieB.json  ml_model_cache_all_leagues.json  ml_model_cache_all_leagues_model.pkl  predictions_Bundesliga.json  predictions_Bundesliga2.json  predictions_Championship.json  predictions_Eredivisie.json  predictions_LaLiga.json  predictions_LeagueOne.json  predictions_LeagueTwo.json  predictions_Ligue1.json  predictions_Ligue2.json  predictions_PL.json  predictions_SerieA.json  predictions_SerieB.json  upcoming_Bundesliga.json  (+11 more)
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+35 files in other folders)
