[tool.poetry]
name = "bet-helper"
version = "0.1.0"
description = "FastAPI backend plus scraping and ML helpers for football predictions."
readme = "README.md"
authors = ["Bet Helper Maintainers"]
packages = [
  { include = "bet_helper" },
  { include = "scrapers" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.128.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
selenium = "^4.24.0"
webdriver-manager = "^4.0.2"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
xgboost = "^2.1.1"
shap = "^0.45.0"

[tool.poetry.scripts]
bet-helper = "bet_helper.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
